# easecook

./: .editorconfig  .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  manage.py  pyproject.toml
backend/apps/: __init__.py
backend/apps/accounts/: __init__.py  admin.py  apps.py  models.py  serializers.py  test_auth_views.py  test_serializers.py  test_views.py  tests.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/meal_plans/: __init__.py  admin.py  apps.py  models.py  serializers.py  test_serializers.py  test_views.py  tests.py  urls.py  views.py
backend/apps/meal_plans/migrations/: 0001_initial.py
backend/apps/recipes/: __init__.py  admin.py  apps.py  models.py  serializers.py  test_seed_demo_data.py  test_serializers.py  test_views.py  tests.py  urls.py  views.py
backend/apps/recipes/management/commands/: seed_demo_data.py
backend/apps/recipes/migrations/: 0001_initial.py
backend/apps/shopping/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  test_serializers.py  test_services.py  test_views.py  tests.py  urls.py  views.py
backend/apps/shopping/migrations/: 0001_initial.py
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
backend/easecook_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: auth.test.ts  auth.ts  client.test.ts  client.ts  mealPlans.test.ts  mealPlans.ts  (+7 more)
(+16 files in other folders)
