[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[project]
name = "easecook-backend"
version = "0.1.0"
description = "Backend API for the EaseCook meal planning application."
requires-python = ">=3.14"
dependencies = [
    "Django>=6.0,<6.1",
    "django-cors-headers>=4.7,<5.0",
    "djangorestframework>=3.16,<3.17",
    "djangorestframework-simplejwt>=5.5,<6.0",
    "drf-spectacular>=0.28,<0.29",
    "psycopg[binary]>=3.2,<4.0",
    "python-dotenv>=1.1,<2.0",
]

[project.optional-dependencies]
dev = [
    "coverage>=7.9,<8.0",
    "pytest>=8.4,<9.0",
    "pytest-django>=4.11,<5.0",
    "ruff>=0.12,<0.13",
]

[tool.setuptools]
py-modules = []

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "DJ", "D"]
ignore = ["D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
